# prd-agent

./: .dockerignore  .env.docker  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_web_client.py  0003_admin_auth.py  0004_project_attachments.py
docker/: backup.sh  default.conf  entrypoint.sh  init.sql  nginx.conf  nginx.deploy.conf  startup.sh
docs/: PRD-v0.2-项目版本规划.md  PRD-已完结功能.md
outputs/: prd-agent-overview.pptx  prd-agent-overview.pptx.inspect.ndjson
skills/generate-sdd/: SKILL.md
skills/generate-sdd/agents/: openai.yaml
skills/generate-sdd/references/: sdd-contract.md
skills/review-prd/: SKILL.md
skills/review-prd/agents/: openai.yaml
skills/review-prd/references/: review-checklist.md
skills/structure-requirements/: SKILL.md
skills/structure-requirements/agents/: openai.yaml
skills/structure-requirements/references/: requirements-contract.md
skills/validate-requirement-logic/: SKILL.md
skills/validate-requirement-logic/agents/: openai.yaml
skills/validate-requirement-logic/references/: seven-dimensions.md
skills/write-prd/: SKILL.md
skills/write-prd/agents/: openai.yaml
skills/write-prd/references/: prd-template.md  product-types.md
src/prd_agent/: __init__.py  agents.py  api.py  attachments.py  cli.py  flow.py  gates.py  models.py  repositories.py  services.py  settings.py  tasks.py  worker.py
tests/: conftest.py  test_agents.py  test_api.py  test_attachments.py  test_cli.py  test_gates.py  test_models.py  test_mysql_repository.py  test_package_init.py  test_repositories.py  test_services.py  test_settings.py  test_task_guardrails.py  test_workflow.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.vue  api.test.ts  api.ts  main.ts  router.test.ts  router.ts  stages.test.ts  stages.ts  styles.css  types.ts
web/src/components/: JobBanner.vue  (+2 more)
(+9 files in other folders)
