[project]
name = "prd-agent"
version = "0.1.0"
description = "CrewAI workflow that turns product requirements into reviewed PRDs and SDDs"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "crewai==1.14.6",
    "crewai-files>=1.9,<2",
    "fastapi>=0.115,<1",
    "pdfplumber>=0.11,<1",
    "PyMySQL>=1.1,<2",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.7,<3",
    "pwdlib[argon2]>=0.2,<1",
    "litellm>=1.84,<2",
    "python-docx>=1.1,<2",
    "python-multipart>=0.0.20,<1",
    "rich>=13.9,<15",
    "sqlalchemy>=2.0,<3",
    "typer>=0.15,<1",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
]

[project.scripts]
prd-agent = "prd_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.hatch.build.targets.wheel]
packages = ["src/prd_agent"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["prd_agent"]
